--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r backend/requirements.txt
