--- a/nodejs-backend/package.json
+++ b/nodejs-backend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
